--- a/generators/templates/stories.tsx.hbs
+++ b/generators/templates/stories.tsx.hbs
@@ -8,7 +8,5 @@ export default {
   argTypes: {}
 } as Meta;
 
-export const Basic: Story = (args) =>
+export const Default: Story = (args) =>
 <{{pascalCase name}} {...args} />;
-
-
