--- a/generators/templates/test.tsx.hbs
+++ b/generators/templates/test.tsx.hbs
@@ -1,15 +1,10 @@
-import { render, screen } from '@testing-library/react'
+import { screen } from '@testing-library/react';
+import { renderWithTheme } from 'utils/tests/helpers';
 
-import {{pascalCase name}} from '.'
+import {{pascalCase name}} from '.';
 
 describe('<{{pascalCase name}} />', () => {
   it('should render the heading', () => {
-    const { container } = render(<{{pascalCase name}} />);
-
-    expect(
-      screen.getByRole('heading', { name: /{{pascalCase name}}/i })
-    ).toBeInTheDocument();
-
-    expect(container.firstChild).toMatchSnapshot();
+    renderWithTheme(<{{pascalCase name}} />);
   });
 });
